# synaxi-predict

./: .env.example  .gitattributes  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PLAN.md  README.md  pyproject.toml
.claude-plugin/: hooks.json  marketplace.json  plugin.json
.claude/commands/: predict-cost.md
.claude/skills/agent-dispatch/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  release.yml
commands/: synaxi-contribute.md  synaxi-predict.md
data/: code_features.json
data/models/: predictor_v1.pkl
data/runs/: 2026-06-12.jsonl  2026-06-13.jsonl  2026-06-14.jsonl
features/code/debug/: t1_off_by_one.feature  t1_wrong_return.feature  t2_broken_merge_sort.feature  t2_failing_test_suite.feature  t2_logic_error_fizzbuzz.feature  t2_recursive_base_case.feature  t2_regex_edge_cases.feature  t3_async_pipeline_bug.feature  t3_concurrency_race.feature  t3_dijkstra_negative_weights.feature
features/code/generation/: apps_comp3000.feature  apps_comp3001.feature  apps_comp3002.feature  apps_comp3003.feature  apps_comp3004.feature  apps_comp3005.feature  apps_comp3006.feature  apps_comp3007.feature  apps_comp3008.feature  apps_comp3009.feature  apps_comp3010.feature  apps_comp3011.feature  apps_comp3012.feature  apps_comp3013.feature  apps_comp3014.feature  apps_comp3015.feature  apps_comp3016.feature  apps_comp3017.feature  apps_comp3018.feature  apps_comp3019.feature  apps_comp3020.feature  apps_comp3021.feature  apps_comp3022.feature  apps_comp3023.feature  apps_comp3024.feature  apps_comp3025.feature  apps_comp3026.feature  apps_comp3027.feature  apps_comp3028.feature  apps_comp3029.feature  apps_comp3030.feature  apps_comp3031.feature  apps_comp3032.feature  apps_comp3033.feature  apps_comp3034.feature  apps_comp3035.feature  apps_comp3036.feature  apps_comp3037.feature  apps_comp3038.feature  apps_comp3039.feature  (+1141 more)
features/code/refactor/: t1_extract_constant.feature  t2_callback_to_async.feature  t2_extract_function.feature  t3_god_class.feature  t3_split_monolith.feature
features/planning/: v1_pipeline_runner.py
predictor/: contribute.py  features.py  parse_session.py  pipeline.py  predict.py  record_actual.py  train.py
predictor/stages/: __init__.py  generation.py  planning.py  research.py  validation.py  verification.py
scripts/: eval_holdout.py  eval_pass_rate.py  extract_code_features.py  extract_swe_smith_features.py  import_benchmarks.py  import_humaneval.py  import_loong0814.py  import_loong0814_full.py  import_openhands.py  import_swe_smith.py  plugin-setup.sh  process_contributions.py  run_benchmark.py
skills/agent-dispatch/: SKILL.md
skills/synaxi-contribute/: SKILL.md
skills/synaxi-predict/: SKILL.md
